--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
    <!-- DESCRIPCION-->
     <meta name="descripcion" content="Inicio, explora nuestro sitio de moda.">
-    
+
     <link rel="stylesheet" href="./css/destino.css">
 
     <link rel="stylesheet" href="mi-bootstrap.css">
@@ -116,7 +116,8 @@
       </div>
       <section class="anticipo">
         <p> ¡Enterate antes que nadie de nuestro anticipo de temporada! </p>
-      <a class="portada" href="http://127.0.0.1:5500/tienda.html"> Mira aqui  </a>
+      <a class="portada" href="file:///Applications/Desarrollo%20web%20/mi-proyecto-dos/proyecto-sass/tienda.html
+      "> Mira aqui  </a>
     </section>
 
 
