--- a/tienda.html
+++ b/tienda.html
@@ -21,7 +21,7 @@
 
        <!-- DESCRIPCION-->
        <meta name="descripcion" content="Inicio, explora nuestro sitio de moda.">
-       
+
     <link rel="stylesheet" href="./css/destino.css">
 
     <link rel="stylesheet" href="mi-bootstrap.css">
@@ -33,7 +33,7 @@
    <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg .bg-*" style="background-color: #e9a9c9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="file:///Applications/Desarrollo%20web%20/mi-proyecto-dos/proyecto-sass/index.html">
+            <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">
           <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="25%">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </a>
             <span class="navbar-toggler-icon"></span>
