--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <section class="anticipo">
         <p> ¡Enterate antes que nadie de nuestro anticipo de temporada! </p>
-      <a class="portada" href="http://127.0.0.1:5500/tienda.html"> Mira aqui  </a>
+      <a class="portada" href="https://modaatica.000webhostapp.com/tienda.html"> Mira aqui  </a>
     </section>
 
 
