--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg .bg-*" style="background-color: #e9a9c9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="http://127.0.0.1:5500/index.html"> </a>
+            <a class="navbar-brand" href="https://modaatica.000webhostapp.com"> </a>
           <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="10%">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
