--- a/contactanos.html
+++ b/contactanos.html
@@ -30,7 +30,7 @@
    <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg .bg-*" style="background-color: #e9a9c9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://modaatica.000webhostapp.com">
+            <a class="navbar-brand" href="./index.html">
           <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="25%">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </a>
           </button>
