--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -10,32 +10,33 @@
     
     <meta name="keywords" content="Atica Moda, ropa, argentina,">
 
+
      <!-- Favicon -->
 
      <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
      <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-     <!--TITLES -->
- 
-    <title> Sobre Nosotros </title>
+    <!-- TITLES -->
+    <title> Pagina principal del sitio oficial de Atica Moda  </title>
 
-       <!-- DESCRIPCION-->
-       <meta name="descripcion" content="Inicio, explora nuestro sitio de moda.">
+   <!-- DESCRIPCION-->
+    <meta name="descripcion" content="Inicio, explora nuestro sitio de moda.">
 
     <link rel="stylesheet" href="./css/destino.css">
 
     <link rel="stylesheet" href="mi-bootstrap.css">
 </head>
 
-<body id="grids" >
+<body>
     <h1 class="encabezado borde" > ATICA MODA-VENTA MINORISTA Y MAYORISTA</h1>
 
    <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg .bg-*" style="background-color: #e9a9c9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-          <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="25%">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </a>
+            <a class="navbar-brand" href="index.html"> 
+          <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="20%">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></a>
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -43,7 +44,7 @@
                 <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link active" aria-current="page dropdown-toggle" href="sale.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Sale</a>
+                <a class="nav-link active dropdown-toggle" href="sale.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Sale</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #f5cadf;">
                   <li><a class="dropdown-item" href="#">Buzos</a></li>
                   <li><a class="dropdown-item" href="#">Remeras</a></li>
@@ -51,7 +52,6 @@
                   <li><a class="dropdown-item" href="#">Pantalones</a></li>
                   <li><a class="dropdown-item" href="#">Short</a></li>
                   <li><a class="dropdown-item" href="#">Bodys</a></li>
-                 
                   </ul>
               </li>
               <li class="nav-item">
@@ -63,10 +63,10 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./contactanos.html">Contacto</a>
             </ul>
-            <form class="d-flex" role="search">
+              <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="search">
               <button class="btn btn-sm btn-outline-secondary" type="button">Buscar</button>
-            </form>
+              </form>
           </div>
         </div>
       </nav>
@@ -83,7 +83,7 @@
      </section>       
             <section class="figure-one">
                 <div>
-                    <img src="./imagenes/mangas-largas-nude.webp" width="300" alt="remera_mangas_largas">
+                    <img class="img" src="./imagenes/mangas-largas-nude.webp" width="300" alt="remera_mangas_largas">
                     <div class="parrafo">
                     <h3> Nuestra Misión</h3>
                     <p> Marcar la diferencia a través de nuestra marca y estar a la vanguardia de las tendencias de moda.
@@ -159,9 +159,9 @@
 </div>
 </div>
 
-<div class="d-flex flex-column flex-sm-row justify-content-center py-4 my-4 border-top">
+  <div class="d-flex flex-column flex-sm-row justify-content-center py-4 my-4 border-top">
     <p>&copy; 2022 Atica Moda. Todos los derechos reservados.</p>
-    </div>  
+  </div>  
 </footer>
 
 
