--- a/ubicacion.html
+++ b/ubicacion.html
@@ -10,31 +10,33 @@
     
     <meta name="keywords" content="Atica Moda, ropa, argentina,">
 
+
      <!-- Favicon -->
 
      <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
      <link rel="icon" href="favicon.ico" type="image/x-icon">
- 
-     <!--TITLES-->
-    <title> Ubicación </title>
 
-       <!-- DESCRIPCION-->
-       <meta name="descripcion" content="Ubicacion, veni a visitarnos.">
+    <!-- TITLES -->
+    <title> Pagina principal del sitio oficial de Atica Moda  </title>
+
+   <!-- DESCRIPCION-->
+    <meta name="descripcion" content="Inicio, explora nuestro sitio de moda.">
 
     <link rel="stylesheet" href="./css/destino.css">
 
     <link rel="stylesheet" href="mi-bootstrap.css">
 </head>
 
-<body id="grids" >
+<body>
     <h1 class="encabezado borde" > ATICA MODA-VENTA MINORISTA Y MAYORISTA</h1>
 
    <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg .bg-*" style="background-color: #e9a9c9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-          <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="25%">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </a>
+            <a class="navbar-brand" href="index.html"> 
+          <img src="./imagenes/logo-atica.PNG" alt=" Logo Atica Moda"  width="20%">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></a>
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -42,7 +44,7 @@
                 <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link active" aria-current="page dropdown-toggle" href="sale.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Sale</a>
+                <a class="nav-link active dropdown-toggle" href="sale.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Sale</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #f5cadf;">
                   <li><a class="dropdown-item" href="#">Buzos</a></li>
                   <li><a class="dropdown-item" href="#">Remeras</a></li>
@@ -50,7 +52,7 @@
                   <li><a class="dropdown-item" href="#">Pantalones</a></li>
                   <li><a class="dropdown-item" href="#">Short</a></li>
                   <li><a class="dropdown-item" href="#">Bodys</a></li>
-                </ul>
+                  </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./ubicacion.html">Ubicacion</a>
@@ -61,10 +63,10 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./contactanos.html">Contacto</a>
             </ul>
-            <form class="d-flex" role="search">
+              <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="search">
               <button class="btn btn-sm btn-outline-secondary" type="button">Buscar</button>
-            </form>
+              </form>
           </div>
         </div>
       </nav>
@@ -75,13 +77,13 @@
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">¡Atención!</h4>
     <hr>
-        <p class="alert">Momentaneamente solo nos encontramos en showroom con cita previa, contáctanos para obtener tu turno.</p>
+        <p class="alerta">Momentaneamente solo nos encontramos en showroom con cita previa, contáctanos para obtener tu turno.</p>
    
         <hr>
       </div>
 
-        <div class="ratio  ratio-16x9">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27260.542932875214!2d-64.01758041086816!3d-31.343305308559604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329508d55dd2bf%3A0xef057104f12d494!2sMi%20Granja%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1652287567658!5m2!1ses-419!2sar title=" title="Mapa de ubicacion" allowfullscreen></iframe>
+        <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27260.542932875214!2d-64.01758041086816!3d-31.343305308559604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329508d55dd2bf%3A0xef057104f12d494!2sMi%20Granja%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1652287567658!5m2!1ses-419!2sar title=" title="Mapa de ubicacion" allowfullscreen width="80%" height="480vh"></iframe>
           </div>
   </main>
 
@@ -135,7 +137,6 @@
     <a href="https://m.facebook.com/ATICA-MODA-101129771782589/?ref=py_c"><img src="./imagenes/Fb.png" alt="facebook" width="40vh"></a>
 
     <a href=""><img src="./imagenes/WhatsApp.png" alt=" WhatsApp" width="40vh"></a>
-</div>
 </form>
 </div>
 </div>
