--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -86,7 +86,7 @@
                     <img class="img" src="./imagenes/mangas-largas-nude.webp" width="300" alt="remera_mangas_largas">
                     <div class="parrafo">
                     <h3> Nuestra Misión</h3>
-                    <p> Marcar la diferencia a través de nuestra marca y estar a la vanguardia de las tendencias de moda.
+                    <p class="nosotros"> Marcar la diferencia a través de nuestra marca y estar a la vanguardia de las tendencias de moda.
                     Garantizar que nuestros clientes tengan la experiencia de compra mas agradable.
                     </p>
                     </div>
@@ -98,8 +98,8 @@
                 <img class="img" src="./imagenes/sweater-negro-corazon.webp" width="270" alt="Sweater">
                 <div class="parrafo-dos" >
                     <h3>Nuestra Historia</h3>
-                    <p> Comenzamos en el año 2020, con un microemprendimiento muy chiquito, en medio de una pandemia y la insertidumbre de no saber que se venia, con el pasar de los meses nos fuimos haciendo mas fuertes y gracias al apoyo incondicional de todos ustedes hoy tenemos nuestro showroom en marcha y proyectando a futuro muchas cosas lindas.
-                    <p>¡GRACIAS POR SER PARTE!</p> 
+                    <p class="nosotros"> Comenzamos en el año 2020, con un microemprendimiento muy chiquito, en medio de una pandemia y la insertidumbre de no saber que se venia, con el pasar de los meses nos fuimos haciendo mas fuertes y gracias al apoyo incondicional de todos ustedes hoy tenemos nuestro showroom en marcha y proyectando a futuro muchas cosas lindas.
+                    <p class="nosotros">¡GRACIAS POR SER PARTE!</p> 
                     </p>
                 </div>
                 </div>
